Валидация обязательных полей. правки багов, вьюх (редиректы, грамматика, перепись автосгенеренного кода, вып. списки для языковых пар)

--- a/TranslationReg/Views/LanguagePairs/Create.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TranslationRegistryModel.LanguagePair
+﻿@model TranslationReg.Models.LanguagePairsModel
 <div class="formContainer">
     @using (Html.BeginForm())
     {
@@ -7,26 +7,23 @@
         <div class="form-horizontal">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.languagePair.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control" } })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.OriginalLanguageId, "Язык оригинала", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.languagePair.OriginalLanguageId, "Язык оригинала", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("OriginalLanguageId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.OriginalLanguageId, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(model=>model.languagePair.OriginalLanguageId, Model.languageSelectlist, null, htmlAttributes: new { @class = "form-control" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.TranslationLanguageId, "Язык перевода", htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.languagePair.TranslationLanguageId, "Язык перевода", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("TranslationLanguageId", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.TranslationLanguageId, "", new { @class = "text-danger" })
+                    @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.languageSelectlist, null, htmlAttributes: new { @class = "form-control" })
                 </div>
             </div>
 
