--- a/TranslationReg/Views/Projects/Create.cshtml
+++ b/TranslationReg/Views/Projects/Create.cshtml
@@ -10,7 +10,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
                     @Html.ValidationMessageFor(model => model.Project.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -18,7 +18,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Project.LanguagePairId, "Языковая пара", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.Project.LanguagePairId, Model.LanguagePairs, new { @class = "form-control", requred = "required" })
                     @Html.ValidationMessageFor(model => model.Project.LanguagePairId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -26,7 +26,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Project.WordsNumber, "Количество слов", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Project.WordsNumber, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Project.WordsNumber, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
                     @Html.ValidationMessageFor(model => model.Project.WordsNumber, "", new { @class = "text-danger" })
                 </div>
             </div>
