--- a/TranslationReg/Views/UnitOfMeasure/Create.cshtml
+++ b/TranslationReg/Views/UnitOfMeasure/Create.cshtml
@@ -9,7 +9,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Name, "Название", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", required = "required" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
