Валидация обязательных полей, правка view-models, правки выпадающих списков

--- a/TranslationReg/Views/DocStages/Edit.cshtml
+++ b/TranslationReg/Views/DocStages/Edit.cshtml
@@ -14,7 +14,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.WorkTypeId, "WorkTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
                 @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -22,7 +22,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DocFileId, "DocFileId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("DocFileId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("DocFileId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
                 @Html.ValidationMessageFor(model => model.DocFileId, "", new { @class = "text-danger" })
             </div>
         </div>
