--- a/TranslationReg/Views/DocStages/Create.cshtml
+++ b/TranslationReg/Views/DocStages/Create.cshtml
@@ -15,7 +15,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.WorkTypeId, "Тип работ", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.DropDownList("WorkTypeId", null, htmlAttributes: new { @class = "form-control", requred = "required" })
                         @Html.ValidationMessageFor(model => model.WorkTypeId, "", new { @class = "text-danger" })
                     </div>
                 </div>
