--- a/TranslationReg/Views/LanguagePairs/Create.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Create.cshtml
@@ -9,21 +9,21 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.languagePair.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.languagePair.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.languagePair.OriginalLanguageId, "Язык оригинала", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model=>model.languagePair.OriginalLanguageId, Model.languageSelectlist, null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model=>model.languagePair.OriginalLanguageId, Model.languageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.languagePair.TranslationLanguageId, "Язык перевода", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.languageSelectlist, null, htmlAttributes: new { @class = "form-control" })
+                    @Html.DropDownListFor(model => model.languagePair.TranslationLanguageId, Model.languageSelectlist, null, htmlAttributes: new { @class = "form-control", requred = "required" })
                 </div>
             </div>
 
