--- a/TranslationReg/Views/Languages/Create.cshtml
+++ b/TranslationReg/Views/Languages/Create.cshtml
@@ -9,15 +9,15 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Name, "Наименование", htmlAttributes: new { @class = "control-label  col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.ShortName, "Сокращение", htmlAttributes: new { @class = "control-label  col-md-2" })
+                @Html.LabelFor(model => model.ShortName, "Сокращение", htmlAttributes: new { @class = "control-label  col-md-2"})
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
                     @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
                 </div>
             </div>
