--- a/TranslationReg/Views/Languages/Edit.cshtml
+++ b/TranslationReg/Views/Languages/Edit.cshtml
@@ -12,7 +12,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-5" })
                 <div class="col-md-7">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -20,7 +20,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.ShortName, "Сокращение", htmlAttributes: new { @class = "control-label col-md-5" })
                 <div class="col-md-7">
-                    @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.ShortName, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
                     @Html.ValidationMessageFor(model => model.ShortName, "", new { @class = "text-danger" })
                 </div>
             </div>
