--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -10,6 +10,22 @@ body {
   min-height: 100%;
   position: relative;
   background-color: #EEF1F5;
+  margin-bottom: 50px;
+}
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0px;
+  height: 50px;
+  width: 100%;
+  padding: 15px;
+  color: white;
+  background: #241717;
+}
+.navbar-brand {
+  width: 50px;
+  background-image: url("images/logo_tpu.png");
+  background-repeat: no-repeat;
 }
 @media (min-width: 768px) {
   .container {
@@ -19,12 +35,13 @@ body {
     display: block;
     padding-right: 15px;
   }
+  .navbar-right > li a:hover {
+    background: #505b69;
+  }
   .main-menu > li > a {
     display: block;
     font-weight: 500;
     color: white;
-    border-bottom: 3px solid white;
-    border-radius: 2px;
     margin-right: 7px;
   }
   .main-menu > li > a:hover,
@@ -70,7 +87,7 @@ body {
   text-align: center;
   background-color: #d6d6d6;
   height: 55px;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 55px;
   border-right: 2px solid darkgray;
 }
@@ -82,20 +99,38 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border-right: 2px solid;
-  border-bottom: 2px solid;
-  border-left: 2px solid;
-  border-color: darkgray;
+  border: 2px solid darkgray;
+  border-collapse: collapse;
 }
 .properties > div {
-  padding: 10px 0;
-  text-align: center;
-  height: 55px;
+  padding: 15px 0;
+  height: auto;
   font-size: 20px;
   border-right: 2px solid darkgray;
+  text-align: center;
 }
 .properties > div:last-child {
+  display: flex;
   border-right: none;
+}
+.properties > div:first-child a {
+  color: black;
+  text-decoration: none;
+  width: 100%;
+}
+.properties > div a {
+  line-height: 1.2;
+}
+.properties > div p {
+  margin: 0;
+  line-height: 1.2;
+}
+.action-btn {
+  margin: auto;
+  width: 400px;
+}
+.action-btn > a {
+  margin-bottom: 0;
 }
 @media screen and (max-width: 479px) {
   .nav-tabs-responsive > li {
@@ -202,4 +237,33 @@ body {
 }
 .createBtn {
   margin-bottom: 10px;
+}
+.disabled-btn {
+  background: lightgrey;
+  border-color: grey;
+  color: white;
+}
+.filters {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 15px;
+}
+.filters li {
+  display: inline-block;
+}
+.filters li a {
+  display: block;
+  padding: 8px 10px;
+  color: black;
+  text-decoration: none;
+  transition: 0.4s;
+  border-radius: 30px;
+}
+.filters li a:hover {
+  background: #241717;
+  color: white;
+}
+.filter-active {
+  background: #241717;
+  color: white;
 }
