--- a/TranslationReg/Views/LanguagePairs/List.cshtml
+++ b/TranslationReg/Views/LanguagePairs/List.cshtml
@@ -2,13 +2,13 @@
 
 <h2>Языковые пары</h2>
 
-<a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addLanguagePairForm" 
+<a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addLanguagePairForm"
    href="/LanguagePairs/Create" class="btn btn-primary createBtn" role="button">
     Добавить
 </a>
 <div id="addLanguagePairForm" class="dynamicBlock"></div>
 
-<div class="container myForm" id="languageEditor">
+<div class="container ">
     <div class="titles">
         <div class="col-md-3">@Html.Label("Язык оригинала")</div>
         <div class="col-md-3">@Html.Label("Язык перевода")</div>
@@ -22,13 +22,15 @@
             <div class="col-md-3">@Html.DisplayFor(modelItem => item.TranslationLanguage.Name)</div>
             <div class="col-md-3">@Html.DisplayFor(modelItem => item.Name)</div>
             <div class="col-md-3">
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)" 
-                   href="/LanguagePairs/Edit/@item.Id" class="btn btn-primary editBtn">Редактировать</a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)" 
-                   href="/LanguagePairs/Delete/@item.Id"class="btn btn-danger deleteBtn"  data-dialog-title="Удаление записи">Удалить</a>
+                <div class="action-btn">
+                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)"
+                       href="/LanguagePairs/Edit/@item.Id" class="btn btn-primary editBtn">Редактировать</a>
+                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#languagePair@(item.Id)"
+                       href="/LanguagePairs/Delete/@item.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+                </div>
             </div>
         </div>
         <div id="languagePair@(item.Id)" class="dynamicBlock dynamicItem"></div>
     }
 </div>
- 
+
