--- a/TranslationReg/Views/Languages/List.cshtml
+++ b/TranslationReg/Views/Languages/List.cshtml
@@ -6,7 +6,7 @@
        href="/Languages/Create" class="btn btn-primary createBtn">Добавить</a>
     <div id="addLanguageForm" class="dynamicBlock"></div>
 
-    <div class="container myForm" id="languageEditor">
+    <div class="container">
         <div class="titles">
             <div class="col-md-4">@Html.Label("Наименование")</div>
             <div class="col-md-4">@Html.Label("Сокращение")</div>
@@ -18,10 +18,12 @@
                 <div class="col-md-4">@Html.DisplayFor(modelItem => item.Name)</div>
                 <div class="col-md-4">@Html.DisplayFor(modelItem => item.ShortName)</div>
                 <div class="col-md-4">
-                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)" 
-                       href="/Languages/Edit/@item.Id" class="btn btn-primary editBtn">Редактировать</a>
-                    <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)" 
-                       href="/Languages/Delete/@item.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+                    <div class="action-btn">
+                        <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)"
+                           href="/Languages/Edit/@item.Id" class="btn btn-primary editBtn">Редактировать</a>
+                        <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#language@(item.Id)"
+                           href="/Languages/Delete/@item.Id" class="btn btn-danger deleteBtn" data-dialog-title="Удаление записи">Удалить</a>
+                    </div>
                 </div>
             </div>
             <div id="language@(item.Id)" class="dynamicBlock dynamicItem"></div>
