Инфа на главной страничке с проектами, правки вьюшки ред. проекта, правка редиректа с редактирования

--- a/TranslationReg/Views/Projects/Details.cshtml
+++ b/TranslationReg/Views/Projects/Details.cshtml
@@ -8,7 +8,7 @@
 
 
         <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#addDocForm"
-           href="/Documents/Create" class="btn btn-success createBtn">Добавить документ</a>
+           href="/Documents/Create" class="btn btn-primary createBtn">Добавить документ</a>
         <div id="addDocForm" class="dynamicBlock"></div>
 
         <div class="titles">
