--- a/TranslationReg/Views/Projects/List.cshtml
+++ b/TranslationReg/Views/Projects/List.cshtml
@@ -7,24 +7,28 @@
 <div class="container myForm Pair" id="languageEditor">
     <div class="titles">
         <div class="col-md-4">@Html.Label("Название")</div>
-        <div class="col-md-4">@Html.Label("Языковая пара")</div>
-        <div class="col-md-4">@Html.Label("Команды")</div>
+        <div class="col-md-2">@Html.Label("Пользователь")</div>
+        <div class="col-md-1">@Html.Label("Перевод")</div>
+        <div class="col-md-2">@Html.Label("Статус")</div>
+        <div class="col-md-3">@Html.Label("Команды")</div>
     </div>
 
     @foreach (var project in Model)
     {
-        <div class="properties">
-            <div class="col-md-4"><a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a></div>
-            <div class="col-md-4">@Html.DisplayFor(modelItem => project.LanguagePair.Name)</div>
-            <div class="col-md-4">
-                <a href="/Projects/Details/@project.Id" class="btn btn-info">Открыть</a>
-                <a href="/Projects/Edit/@project.Id" class="btn btn-primary">Редактировать</a>
-                <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@project.Id"
-                   href="/Projects/DetailsShort/@project.Id" class="btn btn-info detailsBtn">Детали</a>
-                <a data-ajax="true"
-                   href="/Projects/Delete/@project.Id" class="btn btn-danger deleteBtn">Удалить</a>
-            </div>
+    <div class="properties">
+        <div class="col-md-4"><a class="titleLink" href="/Projects/TabPages/@(project.Id)">@project.Name</a></div>
+        <div class="col-md-2">@Html.DisplayFor(modelItem => project.Creator.Name)</div>
+        <div class="col-md-1">@Html.DisplayFor(modelItem => project.LanguagePair.Name)</div>
+        <div class="col-md-2">@Html.DisplayFor(modelItem => project.ProjectStatus.Name)</div>
+        <div class="col-md-3">
+            <a href="/Projects/Details/@project.Id" class="btn btn-info">Открыть</a>
+            <a href="/Projects/Edit/@project.Id" class="btn btn-primary">Редактировать</a>
+            <a data-ajax="true" data-ajax-mode="replace" data-ajax-update="#@project.Id"
+               href="/Projects/DetailsShort/@project.Id" class="btn btn-info detailsBtn">Детали</a>
+            <a data-ajax="true"
+               href="/Projects/Delete/@project.Id" class="btn btn-danger deleteBtn">Удалить</a>
         </div>
+    </div>
         <div id="@(project.Id)" class="dynamicBlock"></div>
     }
 </div>
