--- a/TranslationReg/Views/Projects/Edit.cshtml
+++ b/TranslationReg/Views/Projects/Edit.cshtml
@@ -16,6 +16,13 @@
     @Html.HiddenFor(model => model.Project.CreatorId)
 
     <div class="form-group">
+        @Html.LabelFor(model => model.Project.Creator, "Создатель", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.Project.Creator.Name, new { htmlAttributes = new { @class = "form-control", disabled = "disabled"} })
+        </div>
+    </div>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.Project.Name, "Наименование", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Project.Name, new { htmlAttributes = new { @class = "form-control", requred = "required" } })
